# kramden-provision

./: .gitignore  99_kramden-spec.gschema.override  README.md  efi-read.sh  efi-write.sh  meson.build
.github/workflows/: ppa.yaml
data/: kramden-device.desktop.in  kramden-provision-finaltest.desktop  kramden-provision-finaltest.desktop.in  kramden-provision-osload.desktop.in  kramden-spec.desktop.in  meson.build  org.kramden.device.desktop.in  org.kramden.provision-finaltest.desktop.in  org.kramden.provision-osload.desktop.in  org.kramden.provision-secureerase.desktop.in  org.kramden.secure-erase.desktop.in  org.kramden.spec.desktop.in
data/documents/: meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  kramden-device.install  kramden-provision.install  kramden-spec.install
pixmaps/: meson.build
scripts/: apply-hardware-fixes.sh  asset.sh  bios_password.sh  clock.sh  dell.sh  get-kramden-provision  kramden-reset-finaltest  kramden-reset-osload  kramden-reset-spec  kramden-secure-erase  meson.build
src/: check_packages.py  constants.py  deviceinfo.py  finaltest.py  finaltestcomplete.py  generate_tracking_sheet.py  generate_tracking_sheet_a5.py  guide.py  knum.py  kramden-device.in  kramden-provision-finaltest.in  kramden-provision-osload.in  kramden-secure-erase.in  kramden-spec.in  landscape.py  loading_capture.py  manualtest.py  meson.build  observable.py  osload.py  osloadcomplete.py  secureerase.py  sortly.py  sortly_lookup_by_name.py  sortly_lookup_by_serial.py  sortly_register.py  sortly_update_system_info.py  spec.py  speccomplete.py  specinfo.py  specmanualtest.py  style.css  sysinfo.py  touchscreen_test_runner.py  utils.py
src/css/: style.css
tests/: meson.build  test_manualtest.py  test_sortly.py  test_utils.py
